# algebra

./: LICENSE  README.md
algebra/: CMakeLists.txt  matrix.pc.in  vertex.pc.in
algebra/include/algebra/: algebra.hpp  vertex.hpp  vertex_double.hpp  vertex_float.hpp  vertex_int.hpp
algebra/include/algebra/matrix/: matrix.hpp  matrix_double.hpp  matrix_float.hpp  matrix_int.hpp
algebra/include/algebra/vector/: vector.hpp  vector_double.hpp  vector_float.hpp  vector_int.hpp
algebra/include/algebra/vertex/: vertex.hpp  vertex_double.hpp  vertex_float.hpp  vertex_int.hpp
algebra/src/: matrix.cpp  matrix_double.cpp  matrix_float.cpp  matrix_int.cpp  vector_double.cpp  vector_float.cpp  vector_int.cpp  vertex.cpp  vertex_double.cpp  vertex_float.cpp  vertex_int.cpp  vertex_operators.cpp
algebra/test/: test.cpp  test_matrix.cpp  test_vertex.cpp
algebra_cpp/include/algebra/matrix/: matrix.hpp
algebra_cpp/src/: matrix.cpp  matrix_double.cpp  matrix_float.cpp  matrix_int.cpp
algebra_cpp/test/: test_matrix.cpp
algebra_py/: TestAndDocumetation.ipynb
algebra_py/.ipynb_checkpoints/: TestAndDocumetation-checkpoint.ipynb
algebra_py/scripts/: matrix.py
log/: latest_list
vertex/: CMakeLists.txt
vertex/include/: vertex.hpp
vertex/src/: test.cpp  vertex.cpp
